...
        android:paddingBottom="@dimen/padding_medium_2"
        android:text="@string/tab_title_register"
        android:textAppearance="@style/SectionHeader"
        android:textColor="@color/toolbar_text_color" />

    <FrameLayout
        android:id="@+id/frame_stepper_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_title"
        android:background="@color/subtitle_bar_bg_color"
        android:paddingStart="@dimen/padding_large"
        android:paddingTop="@dimen/activity_vertical_margin"
...
                android:layout_marginBottom="@dimen/margin_medium"
                android:textSize="17sp"
                android:visibility="gone"
                tools:text="Please, this is a form step description" />

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_username_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                app:cantContainSpaces="true"
                app:required="true">

                <EditText
                    android:id="@+id/register_form_username_edittext"
...
                    android:inputType="text"
                    android:textSize="15sp" />

            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_password_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:cantContainSpaces="true"
                app:passwordToggleEnabled="true"
                app:required="true">

...
                    android:hint="@string/register_form_password_title"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_password_again_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:cantContainSpaces="true"
                app:passwordToggleEnabled="true"
                app:required="true">

...
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_firstname_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:required="true">

                <EditText
                    android:layout_width="match_parent"
...
                    android:layout_weight="0"
                    android:text="@string/tab_title_login" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prev_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_arrow_left"
                android:text="@string/widget_quiz_prev"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:text="@string/register_btn_text"
                android:theme="@style/PrimaryButton"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/widget_quiz_next"
...
