...
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>

    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
...
    <string name="prefInt_errorTitle">Invalid value</string>
    <string name="prefInt_errorDescription">Please, enter a valid integer value</string>
    <string name="prefShowCourseDescription">Show course description</string>
    <string name="prefShowProgressBar">Show progress bar</string>
    <string name="prefShowSectionNumbers">Show section numbers</string>
    <string name="prefTextSize">Text size</string>
    <string name="prefUser">Username</string>
    <string name="prefUserHint">(read only)</string>
    <string name="prefLogoutEnabled">Enable logout from homepage</string>
    <string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
    <string name="prefDisableNotifications">Disable notifications</string>
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
...
    <string name="transfer_receiving_course">Receiving course file…</string>
    <string name="sign_in_title">Sign in</string>
    <string name="register_account_already">Already have an account?</string>
    <string name="login_dont_have_account">Don\'t have an account yet?</string>
    <string name="offline_register_confirm">Alternatively, you can register offline and start using the app. Then, you\'ll need to submit or transfer your user data later</string>
    <string name="register_offline">Register offline</string>
    <string name="field_required">This field cannot be empty</string>
    <string name="field_spaces_error">Cannot contain spaces</string>
    <string name="permissions.location.title">Access location</string>
    <string name="permissions.location.description">In new Android devices, this permission is needed to be able to pair with other devices using Bluetooth</string>
    <string name="points">points</string>
    <string name="last_year">last year</string>
    <string name="last_month">last month</string>
...
