<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <View style="@style/ExpansorVert" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reg_cha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="CHA"
        app:backgroundTint="@color/bg_button_selectable" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reg_chss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="CHSS"
        app:backgroundTint="@color/bg_button_selectable" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reg_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Other"
        app:backgroundTint="@color/bg_button_selectable" />

    <View style="@style/ExpansorVert" />
</LinearLayout>
